0.17dev (unreleased)
====================

0.16 (2011-03-07)
=================

- Fix supervisorctl to use unix_http_server if used
  [Domen Kožar, NiteoWeb. Work sponsored by Hexagon IT]

0.15 (2011-03-05)
=================

- Added support for unix_http_server additionally to inet_http_server
  [Domen Kožar, NiteoWeb. Work sponsored by Hexagon IT]

0.14 (2010-12-10)
=================

 - Added support for the umask option of supervisord
   [servilio@mcmaster.ca]

 - Move the credentials needed for authenticating with the supervisord
   process from the supervisorctl script to the configuration
   file. Because of bug 180705 of zc.buildout, scripts are made
   world-readable. [servilio@mcmaster.ca]

0.13 (2010-12-07)
=================

 - 'nocleanup' option of Supervisor is now configurable from Buildout
   Patch from Damien Letournel

0.12 (2010-08-04)
=================

 - Quote the environment variables that are written in the supervisor
   configuration file for eventlisteners, otherwise supervisor will not pass
   them on correctly to for example memmon [Fred van Dijk]

0.11 (2010-08-02)
=================

 - 'childlogdir' option of Supervisor is now configurable from Buildout
   [Jonathan Ballet]

 - [include] functionnality in the supervisor configuration file.
   See http://supervisord.org/configuration.html#include
   [ycadour]

0.10.1 (2010-07-27)
===================
- Updated documentation about how to use the memmon event listener [lucielejard]

0.10 (2010-06-03)
=================
 - Added an option for the environment variable PATH
   [lucielejard]
 - Added support for disabling supervisor sections (such as http, rpc and ctl) [Domen Kozar]


0.9 (2009-11-04)
================

 - Applied Jonathan Ballet's patch: The generated control script doesn't 
   automatically connect on the created supervisord when running on a custom port. 

0.8 (2009-04-27)
================

 - Make it possible to set additional options per process in the control script.